Retreival Backend for Crops
include ID's on other crops

--- a/Index.html
+++ b/Index.html
@@ -122,8 +122,8 @@
             <div class="row1">
                 <!--Cabbage Open The Modal -->
                 <button class="myBtn"><img src="Images/cabbage.png" width="55%" height="45%">
-                    <h2>Cabbage</h2>
-                    <p>Cabbage is low in fat and high in fiber that helps keep skin looking health, toned, blemish-free and glowing. it's rich in antioxidants (including vitamin C and beta-carotene).</p>
+                    <h2 id="first_crop_title">Cabbage</h2>
+                    <p id="first_crop_desc">Cabbage is low in fat and high in fiber that helps keep skin looking health, toned, blemish-free and glowing. it's rich in antioxidants (including vitamin C and beta-carotene).</p>
                 </button>
                 <!-- The Modal -->
                 <div id="myModal" class="modal">
@@ -131,7 +131,7 @@
                     <div class="modal-content">
                         <div class="modal-header">
                             <span class="close">×</span>
-                            <h2>Cabbage</h2>
+                            <h2 id="first_crop_title_modal">Cabbage</h2>
                         </div>
                         <div class="modal-body">
                             <div class="modal-information">
@@ -139,7 +139,7 @@
                                 <p>Cabbage is a leafy green, red, or white biennial plant grown as an annual vegetable crop for its dense-leaved heads. Cabbage is a cool-season vegetable suited to both spring and fall. It belongs to the cole crop family (Brassica oleracea), which includes broccoli, Brussels sprouts, cauliflower, collards, kale, and kohlrabi. The trick to growing cabbage is steady, uninterrupted growth. That means rich soil, plenty of water, and good fertilization.</p>
                                 <br>
                                 <h1>💡 Tips</h1>
-                                <p>Plant fall cabbage 6 to 8 weeks before the first frost. Growing plants that have been exposed to cool weather become “hardened” and are tolerant of frost. Cabbage that matures in cool weather is deliciously sweet. Like most vegetables, cabbage needs at least 6 hours of full sun each day; more is better.</p>
+                                <p id="first_crop_modal_tips">Plant fall cabbage 6 to 8 weeks before the first frost. Growing plants that have been exposed to cool weather become “hardened” and are tolerant of frost. Cabbage that matures in cool weather is deliciously sweet. Like most vegetables, cabbage needs at least 6 hours of full sun each day; more is better.</p>
                             </div>
                             <div class="modal-picture">
                              <img src="Images/planting-cabbage.jpg">
@@ -152,8 +152,8 @@
 
                 <!--Chinese Cabbage Trigger/Open The Modal -->
                 <button class="myBtn"><img src="Images/chinese-cabbage.png" width="55%" height="45%">
-                    <h2>Chinese Cabbage</h2>
-                    <p> Chinese Cabbage is an incredibly low-calorie green-leafy vegetable. It's packed with many antioxidant plant compounds such as carotenes, thiocyanates and many more.</p>
+                    <h2 id="second_crop_title">Chinese Cabbage</h2>
+                    <p id="second_crop_desc"> Chinese Cabbage is an incredibly low-calorie green-leafy vegetable. It's packed with many antioxidant plant compounds such as carotenes, thiocyanates and many more.</p>
                 </button>
                 <!-- The Modal -->
                 <div id="myModal2" class="modal">
@@ -161,7 +161,7 @@
                     <div class="modal-content">
                         <div class="modal-header">
                             <span class="close">×</span>
-                            <h2>Chinese Cabbage</h2>
+                            <h2 id="second_crop_title_modal">Chinese Cabbage</h2>
                         </div>
                         <div class="modal-body">
                                 <div class="modal-information">
@@ -169,7 +169,7 @@
                                     <p>Chinese cabbage (Brassica rapa, var. pekinensis), also called pechay Baguio in the Philippines, a form of Chinese cabbage is cultivated for its edible leaves. Napa cabbage is widely grown in eastern Asia and is commonly used to make kimchi, a traditional Korean dish made of spicy fermented vegetables.</p>
                                     <br>
                                     <h1>💡 Tips</h1>
-                                    <p>Chinese cabbage or wombokis grown through direct  seeding. In direct seeding, plant 2 to 3 seeds per hill. When these have germinated, thin out the poor growers but leave one robust plant per hill. Space plants 45 cm to 60 cm apart as this variety is a large heading type. Keep the soil moist and transplant with care. If possible, start seedlings in a protected place and transplant on a cloudy day or in late-afternoon. Apply a starter fertilizer solution like Peters Blossom Starter when planting.
+                                    <p id="second_crop_modal_tips">Chinese cabbage or wombokis grown through direct  seeding. In direct seeding, plant 2 to 3 seeds per hill. When these have germinated, thin out the poor growers but leave one robust plant per hill. Space plants 45 cm to 60 cm apart as this variety is a large heading type. Keep the soil moist and transplant with care. If possible, start seedlings in a protected place and transplant on a cloudy day or in late-afternoon. Apply a starter fertilizer solution like Peters Blossom Starter when planting.
                                     </p>
                                 </div>
                                 <div class="modal-picture">
@@ -183,8 +183,8 @@
 
                  <!--Lettuce Trigger/Open The Modal -->
                  <button class="myBtn"><img src="Images/lettuce.png" width="55%" height="45%">
-                    <h2>Lettuce</h2>
-                    <p>Lettuce contains a good source amount of fiber, iron, folate, and vitamin C. It helps with anti-inflammatory and cholesterol-lowering.</p>
+                    <h2 id="third_crop_title">Lettuce</h2>
+                    <p id="third_crop_desc">Lettuce contains a good source amount of fiber, iron, folate, and vitamin C. It helps with anti-inflammatory and cholesterol-lowering.</p>
                 </button>    
                 <!-- The Modal -->
                 <div id="myModal3" class="modal">
@@ -192,7 +192,7 @@
                     <div class="modal-content">
                         <div class="modal-header">
                             <span class="close">×</span>
-                            <h2>Lettuce</h2>
+                            <h2 id="third_crop_title_modal">Lettuce</h2>
                         </div>
                         <div class="modal-body">
                                 <div class="modal-information">
@@ -200,7 +200,7 @@
                                     <p>Lettuce is an annual plant of the daisy family, Asteraceae. It is most often grown as a leaf vegetable, but sometimes for its stem and seeds. Lettuce is most often used for salads, although it is also seen in other kinds of food, such as soups, sandwiches and wraps; it can also be grilled.</p>
                                     <br>
                                     <h1>💡 Tips</h1>
-                                    <p>Lettuce seeds are often quite small and only require a planting depth of ½ to ½ inch deep. Growing lettuce in rows gives your garden a traditional look. Consider alternating rows of green and red lettuce for a whimsical touch. If you want to grow lettuce from seeds, start indoors during warm weather for fall.</p>
+                                    <p id="third_crop_modal_tips">Lettuce seeds are often quite small and only require a planting depth of ½ to ½ inch deep. Growing lettuce in rows gives your garden a traditional look. Consider alternating rows of green and red lettuce for a whimsical touch. If you want to grow lettuce from seeds, start indoors during warm weather for fall.</p>
                                 </div>
                                 <div class="modal-picture">
                                  <img src="Images/planting-lettuce.jpg">
@@ -1426,9 +1426,92 @@
     </div>
 </body>
 <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-app.js"></script>
-
+<script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-firestore.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-analytics.js"></script>
+<script>
+    const firebaseConfig = {
+        apiKey: "AIzaSyA0Z7v4Ra16VFCFV1P-tKXKoO85qIl5VaM",
+        authDomain: "project-ani-e4c86.firebaseapp.com",
+        projectId: "project-ani-e4c86",
+        storageBucket: "project-ani-e4c86.appspot.com",
+        messagingSenderId: "1027527105712",
+        appId: "1:1027527105712:web:c65eb6a5d15de1c5d4ef75",
+        measurementId: "G-8CBN1FNC7F"
+    };
 
-<script src ="JS/firebase.js">
+    const app = firebase.initializeApp(firebaseConfig);
+    const firestore = firebase.firestore();
+
+    //## Crops Variables ##//
+    
+    // First Card
+    var firstCropTitle = document.getElementById('first_crop_title');
+    var firstCropDesc = document.getElementById('first_crop_desc');
+    var firstCropTitleModal = document.getElementById('first_crop_title_modal');
+    var firstCropModalTips = document.getElementById('first_crop_modal_tips');
+
+    // SecondCard
+    var secondCropTitle = document.getElementById('second_crop_title');
+    var secondCropDesc = document.getElementById('second_crop_desc');
+    var secondCropTitleModal = document.getElementById('second_crop_title_modal');
+    var secondCropModalTips = document.getElementById('second_crop_modal_tips');
+
+    // ThirdCard
+    var thirdCropTitle = document.getElementById('third_crop_title');
+    var thirdCropDesc = document.getElementById('third_crop_desc');
+    var thirdCropTitleModal = document.getElementById('third_crop_title_modal');
+    var thirdCropModalTips = document.getElementById('third_crop_modal_tips');
+
+    // FourthCard
+    var fourthCropTitle = document.getElementById('fourth_crop_title');
+    var fourthCropDesc = document.getElementById('fourth_crop_desc');
+    var fourthCropTitleModal = document.getElementById('fourth_crop_title_modal');
+    var fourthCropModalTips = document.getElementById('fourth_crop_modal_tips');
+
+    // FifthCard
+    var fifthCropTitle = document.getElementById('fifth_crop_title');
+    var fifthCropDesc = document.getElementById('fifth_crop_desc');
+    var fifthCropTitleModal = document.getElementById('fifth_crop_title_modal');
+    var fifthCropModalTips = document.getElementById('fifth_crop_modal_tips');
+
+    // SixthCard
+    var sixthCropTitle = document.getElementById('sixth_crop_title');
+    var sixthCropDesc = document.getElementById('sixth_crop_desc');
+    var sixthCropTitleModal = document.getElementById('sixth_crop_title_modal');
+    var sixthCropModalTips = document.getElementById('sixth_crop_modal_tips');
+
+    // SeventhCard
+    var seventhCropTitle = document.getElementById('seventh_crop_title');
+    var seventhCropDesc = document.getElementById('seventh_crop_desc');
+    var seventhCropTitleModal = document.getElementById('seventh_crop_title_modal');
+    var seventhCropModalTips = document.getElementById('seventh_crop_modal_tips');
+
+    // EightCard
+    var eightCropTitle = document.getElementById('eight_crop_title');
+    var eightCropDesc = document.getElementById('eight_crop_desc');
+    var eightCropTitleModal = document.getElementById('eight_crop_title_modal');
+    var eightCropModalTips = document.getElementById('eight_crop_modal_tips');
+
+    // NinthCard
+    var ninthCropTitle = document.getElementById('ninth_crop_title');
+    var ninthCropDesc = document.getElementById('ninth_crop_desc');
+    var ninthCropTitleModal = document.getElementById('ninth_crop_title_modal');
+    var ninthCropModalTips = document.getElementById('ninth_crop_modal_tips');
+
+    // TenthCard
+    var tenthCropTitle = document.getElementById('tenth_crop_title');
+    var tenthCropDesc = document.getElementById('tenth_crop_desc');
+    var tenthCropTitleModal = document.getElementById('tenth_crop_title_modal');
+    var tenthCropModalTips = document.getElementById('tenth_crop_modal_tips');
+
+
+    // Fetching First Data in Crops
+    firestore.collection('crops').where('id', '==', '1st').get()
+    .then( (querySnapshot) => {
+        console.log(querySnapshot.docs[0].data());
+    })
+    .catch();
+
+
 </script>
 </html>
