--- a/Index.html
+++ b/Index.html
@@ -213,8 +213,8 @@
 
                 <!--Cauliflower Trigger/Open The Modal -->
                 <button class="myBtn"><img src="Images/cauliflower.png" width="55%" height="45%">
-                    <h2>Cauliflower</h2>
-                    <p>Cauliflower is very low in calories yet high in vitamins. In fact, cauliflower contains some of almost every vitamin and mineral that you need.</p>
+                    <h2 id ="fourth_crop_title">Cauliflower</h2>
+                    <p id ="fourth_crop_desc">Cauliflower is very low in calories yet high in vitamins. In fact, cauliflower contains some of almost every vitamin and mineral that you need.</p>
                 </button> 
                 <!-- The Modal -->
                 <div id="myModal4" class="modal">
@@ -222,7 +222,7 @@
                     <div class="modal-content">
                         <div class="modal-header">
                             <span class="close">×</span>
-                            <h2>Cauliflower</h2>
+                            <h2 id = "fourth_crop_title_modal">Cauliflower</h2>
                         </div>
                         <div class="modal-body">
                             <div class="modal-information">
@@ -230,7 +230,7 @@
                                 <p>Cauliflower is one of several vegetables in the species Brassica oleracea in the genus Brassica, which is in the Brassicaceae family. It is an annual plant that reproduces by seed. Typically, only the head is eaten – the edible white flesh sometimes called "curd"</p>
                                 <br>
                                 <h1>💡 Tips</h1>
-                                <p>Cauliflower is a popular vegetable in the Whole World. The fast way to grow cauliflower is to start with young plants. If you're starting indoors, wait until your seedlings have 5 leaves before transplanting them. Water regularly with 2 inches of water each week; even with normal rainfall, this usually requires supplemental watering. For best growth, side-dress the plants with a high-nitrogen fertilizer 3 t o 4 weeks after transplanting.</p>
+                                <p id = "fourth_crop_modal_tips">Cauliflower is a popular vegetable in the Whole World. The fast way to grow cauliflower is to start with young plants. If you're starting indoors, wait until your seedlings have 5 leaves before transplanting them. Water regularly with 2 inches of water each week; even with normal rainfall, this usually requires supplemental watering. For best growth, side-dress the plants with a high-nitrogen fertilizer 3 t o 4 weeks after transplanting.</p>
                             </div>
                             <div class="modal-picture">
                              <img src="Images/planting-cauliflower.jpg">
@@ -243,8 +243,8 @@
 
                  <!--Snap Beans Trigger/Open The Modal -->
                  <button class="myBtn"><img src="Images/snapbeans.png" width="55%" height="45%">
-                    <h2>Snap Beans</h2>
-                    <p>Snap Beans are a rich source of vitamins A, C, and K, and of folic acid and fiber. They have similar nutritional benefits to snap peas and okra.</p>
+                    <h2 id ="fifth_crop_title">Snap Beans</h2>
+                    <p id = "fifth_crop_desc">Snap Beans are a rich source of vitamins A, C, and K, and of folic acid and fiber. They have similar nutritional benefits to snap peas and okra.</p>
                 </button>
                 <!-- The Modal -->
                 <div id="myModal5" class="modal">
@@ -252,7 +252,7 @@
                     <div class="modal-content">
                         <div class="modal-header">
                             <span class="close">×</span>
-                            <h2>Snap Beans</h2>
+                            <h2 id = "fifth_crop_title_modal">Snap Beans</h2>
                         </div>
                         <div class="modal-body">
                             <div class="modal-information">
@@ -260,7 +260,7 @@
                                 <p>Snap Beans or Green beans are the unripe, young fruit of various cultivars of the common bean. Immature or young pods of the runner bean, yardlong bean, and hyacinth bean are used in a similar way. Green beans are known by many common names, including French beans, string beans, snap beans, snaps, and the French name haricot vert.</p>
                                 <br>
                                 <h1>💡 Tips</h1>
-                                <p>Beans generally do not respond well to transplanting, and are usually direct sown around or just after the last spring frost. To get an earlier start, you can put down black plastic, to warm the soil. Black plastic is a type of plastic used by farmers to keep their beans from rot.
+                                <p id = "fifth_crop_title_modal_tips">Beans generally do not respond well to transplanting, and are usually direct sown around or just after the last spring frost. To get an earlier start, you can put down black plastic, to warm the soil. Black plastic is a type of plastic used by farmers to keep their beans from rot.
                                 Most beans should be sown with the eye of the been facing downward, 1-2" deep, approximately 4-6" apart, with 24" or more between rows. The ideal site will be sunny, well-drained, moderately fertile, and slightly acidic (pH 6.0-7.0).
                                 </p>
                             </div>
@@ -277,8 +277,8 @@
             <div class="row2">
                  <!--Garden Peas Trigger/Open The Modal -->
                  <button class="myBtn"><img src="Images/gardenpeas.png" width="60%" height="45%">
-                    <h2>Garden Peas</h2>
-                    <p>Garden Peas are a good source of vitamins C and E, zinc, and other antioxidants that strengthen your immune system.</p>
+                    <h2 id = "sixth_crop_title">Garden Peas</h2>
+                    <p id = "sixth_crop_desc">Garden Peas are a good source of vitamins C and E, zinc, and other antioxidants that strengthen your immune system.</p>
                 </button>
                 <!-- The Modal -->
                 <div id="myModal6" class="modal">
@@ -286,7 +286,7 @@
                     <div class="modal-content">
                         <div class="modal-header">
                             <span class="close">×</span>
-                            <h2>Garden Peas</h2>
+                            <h2 id = "sixth_crop_title_modal">Garden Peas</h2>
                         </div>
                         <div class="modal-body">
                             <div class="modal-information">
@@ -294,7 +294,7 @@
                                 <p>The Garden pea is most commonly the small spherical seed or the seed-pod of the pod fruit Pisum sativum. Each pod contains several peas, which can be green or yellow. Botanically, pea pods are fruit, since they contain seeds and develop from the ovary of a flower.</p>
                                 <br>
                                 <h1>💡 Tips</h1>
-                                <p>Garden Peas can grow in part shade, but they won't be as sweet or productive if grown in full sun. Select a sunny location and well-draining soil. Do NOT plant peas in the same place more than once in every four years. Rotate crops. To speed germination, soak seeds in water overnight before planting. Sow seeds 1 inch deep (slightly deeper if soil is dry) and about 2 to 2 inches apart. Plant rows 7 inches apart; peas do not like their roots distrubed, transplanting is possible.
+                                <p id = "sixth_crop_title_modal_tips">Garden Peas can grow in part shade, but they won't be as sweet or productive if grown in full sun. Select a sunny location and well-draining soil. Do NOT plant peas in the same place more than once in every four years. Rotate crops. To speed germination, soak seeds in water overnight before planting. Sow seeds 1 inch deep (slightly deeper if soil is dry) and about 2 to 2 inches apart. Plant rows 7 inches apart; peas do not like their roots distrubed, transplanting is possible.
                                 </p>
                             </div>
                             <div class="modal-picture">
@@ -308,8 +308,8 @@
 
                 <!--Sweet Pepper Trigger/Open The Modal -->
                 <button class="myBtn"><img src="Images/bell-pepper.png" width="60%" height="40%">
-                    <h2>Sweet Pepper</h2>
-                    <p>Sweet Pepper are packed with vitamins and low in calories! They are an excellent source of vitamin A, vitamin C, and potassium.</p>
+                    <h2 id = "seventh_crop_title">Sweet Pepper</h2>
+                    <p id = "seventh_crop_desc">Sweet Pepper are packed with vitamins and low in calories! They are an excellent source of vitamin A, vitamin C, and potassium.</p>
                 </button>
                 <!-- The Modal -->
                 <div id="myModal7" class="modal">
@@ -317,7 +317,7 @@
                     <div class="modal-content">
                         <div class="modal-header">
                             <span class="close">×</span>
-                            <h2>Sweet Pepper</h2>
+                            <h2 id = "seventh_crop_title_modal">Sweet Pepper</h2>
                         </div>
                         <div class="modal-body">
                             <div class="modal-information">
@@ -325,7 +325,7 @@
                                 <p>The bell pepper is the fruit of plants in the Grossum cultivar group of the species Capsicum annuum. Cultivars of the plant produce fruits in different colors, including red, yellow, orange, green, white, and purple. Bell peppers are sometimes grouped with less pungent pepper varieties as "sweet peppers".</p>
                                 <br>
                                 <h1>💡 Tips</h1>
-                                <p>Plant them 18 to 24 inches apart in a sunny, well-drained spot. Pepper plants need at least 6-8 hours of sunlight per day. Mix compost or other organic matter into the soil when planting. Water immediately after planting, then regularly throughout the season. Peppers are a tender, warm-season crop, so they typically need to be started indoors if grown from seed. Start seeds indoors 8-10 weeks before your last spring frost date. Bell peppers require a fairly long growing season (60 to 90 days), which is another reason to start them indoors.
+                                <p id = "seventh_crop_title_modal_tips">Plant them 18 to 24 inches apart in a sunny, well-drained spot. Pepper plants need at least 6-8 hours of sunlight per day. Mix compost or other organic matter into the soil when planting. Water immediately after planting, then regularly throughout the season. Peppers are a tender, warm-season crop, so they typically need to be started indoors if grown from seed. Start seeds indoors 8-10 weeks before your last spring frost date. Bell peppers require a fairly long growing season (60 to 90 days), which is another reason to start them indoors.
                                 </p>
                             </div>
                             <div class="modal-picture">
@@ -339,8 +339,8 @@
 
                 <!--White Potato Trigger/Open The Modal -->
                 <button class="myBtn"><img src="Images/potato.png" width="60%" height="40%">
-                    <h2>White Potato</h2>
-                    <p>Potatoes are an excellent source for vitamins C and B6, a good source for fiber (which keeps your stomach satisfied longer) and manganese.</p>
+                    <h2 id = "eight_crop_title">White Potato</h2>
+                    <p id = "eight_crop_desc">Potatoes are an excellent source for vitamins C and B6, a good source for fiber (which keeps your stomach satisfied longer) and manganese.</p>
                 </button>
                 <!-- The Modal -->
                 <div id="myModal8" class="modal">
@@ -348,7 +348,7 @@
                     <div class="modal-content">
                         <div class="modal-header">
                             <span class="close">×</span>
-                            <h2>White Potato</h2>
+                            <h2 id = "eight_crop_title_modal">White Potato</h2>
                         </div>
                         <div class="modal-body">
                             <div class="modal-information">
@@ -356,7 +356,7 @@
                                 <p>They have a medium level of starch and are used for boiling, frying and microwaving. Compared to Russets, white potatoes have a smoother, thinner, lighter colored skin. The skins are so thin that they add a slight pleasant texture to creamy mashed potatoes and yet hold their shape when boiled.</p>
                                 <br>
                                 <h1>💡 Tips</h1>
-                                <p>Plant each piece of potato (cut side down, with the eyes pointing up) every 12-15 inches, with the rows spaced 3 feet apart. If your space is limited or if you would like to grow only baby potatoes, you can decrease the spacing between plants. To begin with only fill the trench in with 4 inches of soil.
+                                <p id = "eight_crop_title_modal_tips">Plant each piece of potato (cut side down, with the eyes pointing up) every 12-15 inches, with the rows spaced 3 feet apart. If your space is limited or if you would like to grow only baby potatoes, you can decrease the spacing between plants. To begin with only fill the trench in with 4 inches of soil.
                                 </p>
                             </div>
                             <div class="modal-picture">
@@ -371,8 +371,8 @@
 
                 <!--White Potato Trigger/Open The Modal -->
                 <button class="myBtn"><img src="Images/carrots.png" width="60%" height="40%">
-                    <h2>Carrots</h2>
-                    <p>Carrots are a particularly good source of beta carotene, fiber, vitamin K1, potassium, and antioxidants.</p>
+                    <h2 id = "ninth_crop_title">Carrots</h2>
+                    <p id = "ninth_crop_desc">Carrots are a particularly good source of beta carotene, fiber, vitamin K1, potassium, and antioxidants.</p>
                 </button>
                 <!-- The Modal -->
                 <div id="myModal4" class="modal">
@@ -380,7 +380,7 @@
                     <div class="modal-content">
                         <div class="modal-header">
                             <span class="close">×</span>
-                            <h2>Carrots</h2>
+                            <h2 id = "ninth_crop_title_modal">Carrots</h2>
                         </div>
                         <div class="modal-body">
                             <div class="modal-information">
@@ -388,7 +388,7 @@
                                 <p>The carrot is a root vegetable, most commonly observed as orange in color, though purple, black, red, white, and yellow cultivars exist, all of which are domesticated forms of the wild carrot, Daucus carota, native to Europe and Southwestern Asia.</p>
                                 <br>
                                 <h1>💡 Tips</h1>
-                                <p>Plant your carrots in rows that are 1 to 2 feet apart. Seeds should be planted about a ½ inch deep and 1 to 2 inches apart. When growing carrots in the garden, you’ll wait for your carrot plants to appear. When the plants are 4 inches high, thin the plants to 2 inches  apart. You may find that some of the carrots are actually large enough to eat. When growing carrots in the garden, make sure to plant, per person, 5 to 10 feet of row to have enough carrots for table use. You will get about 1 pound 0.5 kg. of carrots in a 1 foot row. You want to keep your carrots free of weeds. This is especially important when they are small. The weeds will take nutrients away from the carrots and will cause poor carrot development.
+                                <p id = "ninth_crop_title_modal_tips">Plant your carrots in rows that are 1 to 2 feet apart. Seeds should be planted about a ½ inch deep and 1 to 2 inches apart. When growing carrots in the garden, you’ll wait for your carrot plants to appear. When the plants are 4 inches high, thin the plants to 2 inches  apart. You may find that some of the carrots are actually large enough to eat. When growing carrots in the garden, make sure to plant, per person, 5 to 10 feet of row to have enough carrots for table use. You will get about 1 pound 0.5 kg. of carrots in a 1 foot row. You want to keep your carrots free of weeds. This is especially important when they are small. The weeds will take nutrients away from the carrots and will cause poor carrot development.
                                 </p>
                             </div>
                             <div class="modal-picture">
@@ -402,8 +402,8 @@
 
                 <!--Sayote Trigger/Open The Modal -->
                 <button class="myBtn"><img src="Images/sayote.png" width="60%" height="40%">
-                    <h2>Sayote</h2>
-                    <p>Sayote are rich in B-Vitamins and antioxidants so essential for brain health ,Sayote have long been used to make a tea to dissolve kidney stones and reduce high blood pressure. </p>
+                    <h2 id = "tenth_crop_title">Sayote</h2>
+                    <p id = "tenth_crop_desc">Sayote are rich in B-Vitamins and antioxidants so essential for brain health ,Sayote have long been used to make a tea to dissolve kidney stones and reduce high blood pressure. </p>
                 </button>
                 <!-- The Modal -->
                 <div id="myModal5" class="modal">
@@ -411,7 +411,7 @@
                     <div class="modal-content">
                         <div class="modal-header">
                             <span class="close">×</span>
-                            <h2>Sayote</h2>
+                            <h2 id = "tenth_crop_title_modal">Sayote</h2>
                         </div>
                         <div class="modal-body">
                             <div class="modal-information">
@@ -419,7 +419,7 @@
                                 <p>Sayote is a Light green and pear-shaped with a thick skin and a hard core, chayote, or sayote as it is called in the Philippines, grows on vines. It is known as as vegetable pear or mirliton in some parts of the world. We even prefer using chayote over the traditional raw papaya when cooking tinola.</p>
                                 <br>
                                 <h1>💡 Tips</h1>
-                                <p>Caring for the Growing Vine. Water the chayote vine about three times a week, and more regularly in hot, dry conditions. Be sure to have placed the plant in a place where it is able to clamber onto a trellis; chayote vines are rampant climbers and will cover trellises in just about no time at all.
+                                <p id = "tenth_crop_title_modal_tips">Caring for the Growing Vine. Water the chayote vine about three times a week, and more regularly in hot, dry conditions. Be sure to have placed the plant in a place where it is able to clamber onto a trellis; chayote vines are rampant climbers and will cover trellises in just about no time at all.
                                 </p>
                             </div>
                             <div class="modal-picture">
